crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_stmt_let-9.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    symbols: Symbols {
        fns: {},
        classes: {},
        traits: {},
        aliases: {},
    },
    top_level: [
        Let {
            name: "v",
            ty: None,
            value: List(
                [
                    GetVar {
                        name: "v",
                    },
                    GetVar {
                        name: "v",
                    },
                    GetVar {
                        name: "v",
                    },
                    GetVar {
                        name: "v",
                    },
                ],
            ),
        },
    ],
}
