crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_stmt_loop-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    symbols: Symbols {
        fns: {},
        classes: {},
        traits: {},
        aliases: {},
    },
    top_level: [
        LoopInf {
            body: Block {
                items: [
                    Call {
                        opt: false,
                        target: GetVar {
                            name: "a",
                        },
                        args: [],
                    },
                ],
                last: Some(
                    Call {
                        opt: false,
                        target: GetField {
                            opt: false,
                            target: GetVar {
                                name: "b",
                            },
                            key: "d",
                        },
                        args: [],
                    },
                ),
            },
        },
    ],
}
