crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_stmt_loop-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
(
    Module {
        imports: [],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [
            LoopWhile {
                cond: GetField {
                    opt: false,
                    target: GetVar {
                        name: "a",
                    },
                    key: "b",
                },
                body: Block {
                    items: [],
                    last: None,
                },
            },
        ],
    },
    [],
)
