crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_stmt_loop-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Module {
        imports: [],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [
            Loop(
                While(
                    While {
                        cond: GetField(
                            GetField {
                                opt: false,
                                target: GetVar(
                                    GetVar {
                                        name: "a",
                                    },
                                ),
                                key: "b",
                            },
                        ),
                        body: Block {
                            items: [
                                Expr(
                                    Call(
                                        Call {
                                            opt: false,
                                            target: GetVar(
                                                GetVar {
                                                    name: "a",
                                                },
                                            ),
                                            args: [],
                                        },
                                    ),
                                ),
                            ],
                            last: Some(
                                Call(
                                    Call {
                                        opt: false,
                                        target: GetField(
                                            GetField {
                                                opt: false,
                                                target: GetVar(
                                                    GetVar {
                                                        name: "b",
                                                    },
                                                ),
                                                key: "d",
                                            },
                                        ),
                                        args: [],
                                    },
                                ),
                            ),
                        },
                    },
                ),
            ),
        ],
    },
)
