crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_stmt_loop-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Module {
        imports: [],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [
            For {
                item: "_",
                iter: Range {
                    start: Int {
                        value: 0,
                    },
                    end: Int {
                        value: 10,
                    },
                },
                body: Block {
                    items: [],
                    last: None,
                },
            },
        ],
    },
)
