crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_stmt_loop-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
(
    Module {
        imports: [],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [
            LoopFor {
                item: "_",
                iter: Range {
                    start: Int {
                        value: 0,
                    },
                    end: Int {
                        value: 10,
                    },
                },
                body: Block {
                    items: [
                        Call {
                            opt: false,
                            target: GetVar {
                                name: "a",
                            },
                            args: [],
                        },
                    ],
                    last: Some(
                        Call {
                            opt: false,
                            target: GetField {
                                opt: false,
                                target: GetVar {
                                    name: "b",
                                },
                                key: "d",
                            },
                            args: [],
                        },
                    ),
                },
            },
        ],
    },
    [],
)
