crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_stmt_loop.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Module {
        imports: [],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [
            LoopInf {
                body: Block {
                    items: [],
                    last: None,
                },
            },
        ],
    },
)
