crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_top_level_no_semi-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
(
    Module {
        imports: [],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [
            Block {
                items: [],
                last: Some(
                    Int {
                        value: 0,
                    },
                ),
            },
            If {
                branches: [
                    (
                        GetVar {
                            name: "v",
                        },
                        Block {
                            items: [],
                            last: Some(
                                Int {
                                    value: 1,
                                },
                            ),
                        },
                    ),
                ],
                else_: None,
            },
            Try {
                body: Block {
                    items: [],
                    last: Some(
                        GetVar {
                            name: "v",
                        },
                    ),
                },
                catch: (
                    "e",
                    Block {
                        items: [],
                        last: Some(
                            Int {
                                value: 2,
                            },
                        ),
                    },
                ),
            },
            SpawnBlock(
                Block {
                    items: [],
                    last: Some(
                        Int {
                            value: 3,
                        },
                    ),
                },
            ),
        ],
    },
    [],
)
