crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_top_level_no_semi.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
(
    Module {
        imports: [],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [
            Block {
                items: [],
                last: Some(
                    Int {
                        value: 0,
                    },
                ),
            },
            Block {
                items: [],
                last: Some(
                    Int {
                        value: 1,
                    },
                ),
            },
            Block {
                items: [],
                last: Some(
                    Int {
                        value: 2,
                    },
                ),
            },
            Block {
                items: [],
                last: Some(
                    Int {
                        value: 3,
                    },
                ),
            },
        ],
    },
    [],
)
