crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_array.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Array {
        item: Path {
            segments: [
                Segment {
                    ident: "T",
                    generic_args: [],
                },
            ],
        },
    },
)
